# backend/src/main/java/com/reday/auth/response/AuthResponseCode.java
@@ -16,7 +16,8 @@ public enum AuthResponseCode implements ResponseCode {
 	EMAIL_SENT("AUTH_EMAIL_SENT", "인증코드를 발송했습니다."),
 	EMAIL_VERIFIED("AUTH_EMAIL_VERIFIED", "이메일 인증이 완료되었습니다."),
 	PASSWORD_RESET_VERIFICATION_SENT("AUTH_PASSWORD_RESET_VERIFICATION_SENT", "비밀번호 재설정 인증코드를 발송했습니다."),
-	PASSWORD_RESET_VERIFIED("AUTH_PASSWORD_RESET_VERIFIED", "비밀번호 재설정 이메일 인증이 완료되었습니다.");
+	PASSWORD_RESET_VERIFIED("AUTH_PASSWORD_RESET_VERIFIED", "비밀번호 재설정 이메일 인증이 완료되었습니다."),
+	PASSWORD_RESET_SUCCESS("AUTH_PASSWORD_RESET_SUCCESS", "비밀번호 재설정이 완료되었습니다.");
 
 	private final String code;
 	private final String message;
